docs: Re-build roxygen documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(unique_table_name)
 export(unlock_table)
 export(update_snapshot)
 exportMethods(dbBegin)
+exportMethods(dbClearResult)
 exportMethods(dbCommit)
 exportMethods(dbExistsTable)
 exportMethods(dbFetch)
@@ -113,6 +114,7 @@ importFrom(rJava,.jcall)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importMethodsFrom(DBI,dbBegin)
+importMethodsFrom(DBI,dbClearResult)
 importMethodsFrom(DBI,dbCommit)
 importMethodsFrom(DBI,dbExistsTable)
 importMethodsFrom(DBI,dbFetch)
