--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ importMethodsFrom(DBI,dbFetch)
 importMethodsFrom(DBI,dbGetInfo)
 importMethodsFrom(DBI,dbGetRowsAffected)
 importMethodsFrom(DBI,dbIsValid)
+importMethodsFrom(DBI,dbQuoteIdentifier)
 importMethodsFrom(DBI,dbRollback)
 importMethodsFrom(DBI,dbSendQuery)
 importMethodsFrom(DBI,dbSendStatement)
