--- a/.github/workflows/oracle-reprex.yaml
+++ b/.github/workflows/oracle-reprex.yaml
@@ -164,6 +164,7 @@ jobs:
           print(tibble::tibble(out))
           DBI::dbClearResult(r)
 
+          print("## Debug flag 1")
 
           # Start with some clean up
           purrr::walk(
@@ -174,11 +175,13 @@ jobs:
             ~ if (DBI::dbExistsTable(conn, id(., conn))) DBI::dbRemoveTable(conn, id(., conn))
           )
 
+          print("## Debug flag 2")
           purrr::walk(
             c(DBI::Id(schema = "test", table = "one.two"), DBI::Id(schema = "test.one", table = "two")),
             ~ if (schema_exists(conn, .@name[["schema"]]) && DBI::dbExistsTable(conn, .)) DBI::dbRemoveTable(conn, .)
           )
 
+          print("## Debug flag 3")
           # Copy mtcars to conn
           dplyr::copy_to(
             conn, mtcars %>% dplyr::mutate(name = rownames(mtcars)),
@@ -188,6 +191,7 @@ jobs:
             analyze = FALSE
           )
 
+          print("## Debug flag 4")
           dplyr::copy_to(
             conn, mtcars %>% dplyr::mutate(name = rownames(mtcars)),
             name = id("__mtcars", conn),
@@ -196,6 +200,7 @@ jobs:
             analyze = FALSE
           )
 
+          print("## Debug flag 5")
           dplyr::copy_to(
             conn,
             mtcars %>%
@@ -211,6 +216,7 @@ jobs:
             analyze = FALSE
           )
 
+          print("## Debug flag 6")
           dplyr::copy_to(
             conn,
             mtcars %>%
@@ -225,5 +231,7 @@ jobs:
             overwrite = TRUE,
             analyze = FALSE
           )
+          print("## Debug flag 7")
 
-          dbDisconnect(conn)
+          DBI::dbDisconnect(conn)
+          print("## Debug flag 8")
