--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(create_logs_if_missing)
 export(create_table)
 export(db_timestamp)
 export(defer_db_cleanup)
+export(delta_export)
 export(digest_to_checksum)
 export(filter_keys)
 export(get_catalog)
