--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(create_table)
 export(db_timestamp)
 export(defer_db_cleanup)
 export(delta_export)
+export(delta_load)
 export(digest_to_checksum)
 export(filter_keys)
 export(get_catalog)
