docs(_pkgdown): Add delta loading functions to index

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -28,6 +28,8 @@ reference:
     - create_logs_if_missing
     - update_snapshot
     - filter_keys
+    - delta_export
+    - delta_load
     - Logger
     - LoggerNull
 
